Iniciando proyecto Login

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,17 +94,22 @@
       </article>
     </section>
 
-    <section class="social">
-      <h2>Síguenos</h2>
-      <div class="social-icons">
-        <a href="#"><img src="assets/images/icon-instagram.png" alt="Instagram">Instagram</a>
-        <a href="#"><img src="assets/images/icon-facebook.png" alt="Facebook">Facebook</a>
-        <a href="#"><img src="assests/images/icon-x.png" alt="X">X</a>
-      </div>
-    </section>
+   
   </main>
 
   <footer class="footer">
+
+     <section class="social">
+      <h2>Síguenos</h2>
+      <div class="social-icons">
+        <a href="#"><img src="assets/images/icon-instagram.png" alt="Instagram">Instagram</a>
+        <a href="#"><img src="assets/images/icon-equis.png" alt="X">X</a>
+        <a href="#"><img src="assets/images/icon-facebook.png" alt="Facebook">Facebook</a>
+        
+      </div>
+    </section>
+    <br>
+
     <div class="footer-links">
       <a href="#">Preguntas Frecuentes</a>
       <a href="#">Política de Privacidad</a>
